k8s/apps/overlays/homelab/kafka/patches/console.deployment.yaml
# patches/deployment-url-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
spec:
  template:
    spec:
      containers:
        - name: console-ui
        - name: console-api
