k8s/apps/overlays/homelab/kafka/patches/console-ui.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: console-ui-route
spec:
  host: console-ui-route-netsentinel.apps.rhv.telco.ocp.local
